2001-11-30  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: ftp:use-site-chmod setting; don't simulate eof for
	  anything but RETRIEVE; don't do MKD ..
	* resource.cc: ftp:use-site-chmod setting; mirror:order instead of
	  two different settings.
	* MirrorJob.cc, MirrorJob.h: get rid of REVERSE; implement mirroring
	  between two sessions; recognize URLs.
	* FtpGlob.cc: don't show . as directory.
	* FtpListInfo.cc: try MDTM if date_prec>0.
	* Http.cc: send content-length for mkdir.
	* LocalAccess.cc: suppress EEXIST error message; correctly handle mkdir -p.

2001-11-29  Glenn Maynard <g_ld@zewt.org>

	* CmdExec.cc, alias.cc, commands.cc, complete.cc: case insensitive
	  commands and aliases.

2001-11-26  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc, FileFeeder.cc, Filter.cc, Filter.h, Http.cc,
	  LocalAccess.cc, ProcWait.cc, PtyShell.cc, Resolver.cc, SMTask.cc,
	  SMTask.h, buffer.cc, ftpclass.cc, misc.cc, misc.h:
	  (NonFatalError) new function; use it; new setting xfer:full-disk-fatal;
	  use SMTask::now from guess_year.

2001-11-23  Glenn Maynard <g_ld@zewt.org>

	* ftpclass.cc: fix query for ftp:web-mode.
	* FileSetOutput.cc: Fixed wildcard silliness in CLS.  First, I meant
	  strpbrk, not strspn; second, it needs to handle escapes anyway, and
	  you already have a function to do that.
	* GetFileInfo.cc: If a file "abc" exists, and we do "cls abc/def", fail.
	  Improve ENOENT and EACCES error messages.
	* FtpGlob.cc: Add path to FtpGlob status.
	* FtpSplitList.cc, FtpListInfo.cc: Move some status stuff from
	  FtpListInfo to FtpSplitList.  (FtpSplitList was essentially doing
	  this stuff anyway, just not as intelligently.)
	* commands.cc: improve error message of cls.

2001-11-22  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: fix - rmdir/rm were interchanged.

2001-11-21  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: don't assume peer!=0, copy control socket
	  name to member peer_sa.