@@ -2139,6 +2139,8 @@ int Ftp::ReplyLogPriority(int code)
       return 3;
    if(code==250 && mode==CHANGE_DIR)
       return 3;
+   if(code==451 && mode==CLOSED)
+      return 4;
    if(code==550 && mode==ARRAY_INFO
    && !RespQueueIsEmpty() && RespQueue[RQ_head].check_case==CHECK_MDTM)
       return 4;
